force-app/main/default/objects/Vehiculo_de_la_Oportunidad__c/Vehiculo_de_la_Oportunidad__c.object-meta.xml
<CustomObject>
    <label>Vehículo de la Oportunidad</label>
    <nameField>
        <label>Nombre de Vehiculo de la Oportunidad</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehículos de la Oportunidad</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>