force-app/main/default/objects/Vehiculo_de_la_Oportunidad__c/fields/Informe_de_negociacion__c.field-meta.xml
<CustomField>
    <fullName>Informe_de_negociacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Informe de negociación</label>
    <referenceTo>Informe_de_Negociaci_n__c</referenceTo>
    <relationshipLabel>Vehículos de la Oportunidad</relationshipLabel>
    <relationshipName>Vehiculos_de_la_Oportunidad</relationshipName>
    <type>Lookup</type>
</CustomField>