force-app/main/default/objects/Vehiculo_de_la_Oportunidad__c/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Vehículos de la Oportunidad</relationshipLabel>
    <relationshipName>Vehiculos_de_la_Oportunidad</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>