force-app/main/default/objects/Vehiculo_de_la_Oportunidad__c/fields/Precio_de_venta__c.field-meta.xml
<CustomField>
    <fullName>Precio_de_venta__c</fullName>
    <inlineHelpText>Únicamente rellenar durante una venta</inlineHelpText>
    <label>Precio de venta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>