force-app/main/default/objects/Vehiculo_de_la_Oportunidad__c/fields/Vehiculo__c.field-meta.xml
<CustomField>
    <fullName>Vehiculo__c</fullName>
    <label>Vehículo</label>
    <referenceTo>Vehiculo__c</referenceTo>
    <relationshipLabel>Vehículos de la Oportunidad</relationshipLabel>
    <relationshipName>Vehiculos_de_la_Oportunidad</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>