force-app/main/default/objects/Vehiculo_de_la_Oportunidad__c/validationRules/Avaluo_sin_precio_de_venta.validationRule-meta.xml
<ValidationRule>
    <fullName>Avaluo_sin_precio_de_venta</fullName>
    <active>true</active>
    <description>El precio de venta es solo para la venta de un autolote, no para la compra</description>
    <errorConditionFormula>AND(
 Oportunidad__r.RecordType.DeveloperName = &quot;Avaluo&quot;,
 NOT(ISBLANK(Precio_de_venta__c))
)</errorConditionFormula>
    <errorDisplayField>Precio_de_venta__c</errorDisplayField>
    <errorMessage>No se debe completar el campo durante un avalúo</errorMessage>
</ValidationRule>